force-app/main/default/objects/loan__Loan_Account__c/loan__Loan_Account__c.object-meta.xml
<CustomObject>
    <customHelpPage>loan__CLContractHelp</customHelpPage>
    <description>Lending Account</description>
    <label>CL Contract</label>
    <nameField>
        <displayFormat>LAI-{00000000}</displayFormat>
        <label>CL Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CL Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>