force-app/main/default/objects/loan__Loan_Account__c/fields/Actual_Security_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Security_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Security Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>