force-app/main/default/objects/loan__Loan_Account__c/fields/All_Security_Addresses__c.field-meta.xml
<CustomField>
    <fullName>All_Security_Addresses__c</fullName>
    <label>All Security Addresses</label>
    <type>TextArea</type>
</CustomField>