force-app/main/default/objects/loan__Loan_Account__c/fields/Approx_Funds_Being_Received__c.field-meta.xml
<CustomField>
    <fullName>Approx_Funds_Being_Received__c</fullName>
    <label>Approx Funds Being Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>