force-app/main/default/objects/loan__Loan_Account__c/fields/APS_Created__c.field-meta.xml
<CustomField>
    <fullName>APS_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APS Created</label>
    <type>Checkbox</type>
</CustomField>