force-app/main/default/objects/loan__Loan_Account__c/fields/APS_Frequency__c.field-meta.xml
<CustomField>
    <fullName>APS_Frequency__c</fullName>
    <label>APS Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>