force-app/main/default/objects/loan__Loan_Account__c/fields/APS_Status__c.field-meta.xml
<CustomField>
    <fullName>APS_Status__c</fullName>
    <label>APS Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>