force-app/main/default/objects/loan__Loan_Account__c/fields/Bank_Detail_Change__c.field-meta.xml
<CustomField>
    <fullName>Bank_Detail_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Detail Change</label>
    <type>Checkbox</type>
</CustomField>