force-app/main/default/objects/loan__Loan_Account__c/fields/Borrower_ACH_Change__c.field-meta.xml
<CustomField>
    <fullName>Borrower_ACH_Change__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Borrower ACH Change</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipLabel>CL Contracts (Borrower ACH Change)</relationshipLabel>
    <relationshipName>CL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>