force-app/main/default/objects/loan__Loan_Account__c/fields/Broker_Trail_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Broker_Trail_Percentage__c</fullName>
    <label>Broker Trail Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>