force-app/main/default/objects/loan__Loan_Account__c/fields/Calculated_Upcoming_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Upcoming_Repayment_Amount__c</fullName>
    <formula>IF( !ISBLANK(New_Interest_Rate__c) &amp;&amp; !ISBLANK( New_Interest_Rate_Effective_Date__c) &amp;&amp; ISPICKVAL(Repayment_Type__c , &apos;Principal and Interest&apos;),((New_Interest_Rate__c /12)*((1+( New_Interest_Rate__c /12))^ Remaining_Loan_Term__c ))/((1+(New_Interest_Rate__c/12))^ Remaining_Loan_Term__c -1)* loan__Loan_Balance__c,0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Upcoming Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>