force-app/main/default/objects/loan__Loan_Account__c/fields/Capital_Advance_Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Capital_Advance_Amount_Funded__c</fullName>
    <formula>loan__Disbursed_Amount__c - Paid_Prepaid_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Advance - Amount Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>