force-app/main/default/objects/loan__Loan_Account__c/fields/Capital_Advance_Remaining_for_Funding__c.field-meta.xml
<CustomField>
    <fullName>Capital_Advance_Remaining_for_Funding__c</fullName>
    <formula>loan__Remaining_Loan_Amount__c-(Application__r.Subsequent_Drawdown_Prepaid_Interest_Sum__c-Paid_Prepaid_Interest__c+Application__r.First_Tranche_Prepaid_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Advance Remaining for Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>