force-app/main/default/objects/loan__Loan_Account__c/fields/Check_Half_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Check_Half_Yearly__c</fullName>
    <formula>IF( ISBLANK( Statement_Start_Date__c )  ||  ISNULL(Statement_Start_Date__c )  , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Half Yearly</label>
    <type>Checkbox</type>
</CustomField>