force-app/main/default/objects/loan__Loan_Account__c/fields/Conga_Batch_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Batch_Start_Date__c</fullName>
    <formula>IF($User.loan__Current_Branch_s_System_Date__c &gt;  loan__Disbursal_Date__c , IF((MONTH($User.loan__Current_Branch_s_System_Date__c)&gt;=1  &amp;&amp; MONTH($User.loan__Current_Branch_s_System_Date__c)&lt;=6)  &amp;&amp;  YEAR($User.loan__Current_Branch_s_System_Date__c)  &gt;  YEAR(loan__Disbursal_Date__c ) ,  IF((MONTH(loan__Disbursal_Date__c )&gt;=7  &amp;&amp; MONTH(loan__Disbursal_Date__c )&lt;=12  &amp;&amp; YEAR($User.loan__Current_Branch_s_System_Date__c)   =   YEAR(loan__Disbursal_Date__c )+1),loan__Disbursal_Date__c, DATE( YEAR($User.loan__Current_Branch_s_System_Date__c)-1 ,7,1)) ,  IF((MONTH($User.loan__Current_Branch_s_System_Date__c)&gt;=7  &amp;&amp; MONTH($User.loan__Current_Branch_s_System_Date__c)&lt;=12),  IF((MONTH(loan__Disbursal_Date__c )&gt;=1  &amp;&amp; MONTH(loan__Disbursal_Date__c )&lt;=6  &amp;&amp; YEAR($User.loan__Current_Branch_s_System_Date__c)   =   YEAR(loan__Disbursal_Date__c )),loan__Disbursal_Date__c , DATE( YEAR($User.loan__Current_Branch_s_System_Date__c) ,1,1)) , $User.loan__Current_Branch_s_System_Date__c)),$User.loan__Current_Branch_s_System_Date__c)</formula>
    <label>Conga Batch Start Date</label>
    <type>Date</type>
</CustomField>