force-app/main/default/objects/loan__Loan_Account__c/fields/Current_Loan_Balance_Excluding_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance_Excluding_Deposit__c</fullName>
    <formula>loan__Loan_Balance__c- Deposit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Loan Balance Excluding Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>