force-app/main/default/objects/loan__Loan_Account__c/fields/Current_LVR__c.field-meta.xml
<CustomField>
    <fullName>Current_LVR__c</fullName>
    <formula>Current_Loan_Balance_Excluding_Deposit__c/Actual_Security_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>