force-app/main/default/objects/loan__Loan_Account__c/fields/Current_Total_of_Discharged_Securities__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_of_Discharged_Securities__c</fullName>
    <label>Current Total # of Discharged Securities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>