force-app/main/default/objects/loan__Loan_Account__c/fields/Financier_Linked_Loans__c.field-meta.xml
<CustomField>
    <fullName>Financier_Linked_Loans__c</fullName>
    <label>Financier Linked Loans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>