force-app/main/default/objects/loan__Loan_Account__c/fields/First_Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Debit_Date__c</fullName>
    <formula>IF( APS_Frequency__c = &apos;WEEKLY&apos; , loan__Expected_Disbursal_Date__c + 7, IF( APS_Frequency__c = &apos;BI-WEEKLY&apos;, loan__Expected_Disbursal_Date__c + 14, loan__First_Installment_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Debit Date</label>
    <type>Date</type>
</CustomField>