force-app/main/default/objects/loan__Loan_Account__c/fields/First_LPT_after_Bank_detail_Change__c.field-meta.xml
<CustomField>
    <fullName>First_LPT_after_Bank_detail_Change__c</fullName>
    <label>First LPT after Bank detail Change</label>
    <length>50</length>
    <type>Text</type>
</CustomField>