force-app/main/default/objects/loan__Loan_Account__c/fields/First_LPT_after_Settlement__c.field-meta.xml
<CustomField>
    <fullName>First_LPT_after_Settlement__c</fullName>
    <label>First LPT after Settlement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>