force-app/main/default/objects/loan__Loan_Account__c/fields/First_Payment_after_Settlement__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_after_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Payment after Settlement</label>
    <type>Checkbox</type>
</CustomField>