force-app/main/default/objects/loan__Loan_Account__c/fields/First_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Repayment_Date__c</fullName>
    <label>First Repayment Date</label>
    <type>Date</type>
</CustomField>