force-app/main/default/objects/loan__Loan_Account__c/fields/First_Repayment_Date_After_IR_Change__c.field-meta.xml
<CustomField>
    <fullName>First_Repayment_Date_After_IR_Change__c</fullName>
    <label>First Repayment Date After IR Change</label>
    <type>Date</type>
</CustomField>