force-app/main/default/objects/loan__Loan_Account__c/fields/Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate__c</fullName>
    <label>Fixed Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>