force-app/main/default/objects/loan__Loan_Account__c/fields/Fixed_Rate_Term__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Term__c</fullName>
    <label>Fixed Rate Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>