force-app/main/default/objects/loan__Loan_Account__c/fields/Flat_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Repayment_Amount__c</fullName>
    <label>Flat Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>