force-app/main/default/objects/loan__Loan_Account__c/fields/Individual_Borrower_Names__c.field-meta.xml
<CustomField>
    <fullName>Individual_Borrower_Names__c</fullName>
    <label>Individual Borrower Names</label>
    <type>TextArea</type>
</CustomField>