force-app/main/default/objects/loan__Loan_Account__c/fields/Interest_Rate_Change_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Change_Notification_Date__c</fullName>
    <label>Interest Rate Change Notification Date</label>
    <type>Date</type>
</CustomField>