force-app/main/default/objects/loan__Loan_Account__c/fields/Linked_Loans__c.field-meta.xml
<CustomField>
    <fullName>Linked_Loans__c</fullName>
    <label>Linked Loans</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>