force-app/main/default/objects/loan__Loan_Account__c/fields/LMI_provider_list__c.field-meta.xml
<CustomField>
    <fullName>LMI_provider_list__c</fullName>
    <label>LMI provider list</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QBE</fullName>
            </value>
            <value>
                <fullName>Genworth</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>