force-app/main/default/objects/loan__Loan_Account__c/fields/loan__ACH_Next_Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Next_Debit_Date__c</fullName>
    <inlineHelpText>It is the next date on which the installment amount will be deducted from the borrower&#39;s account.</inlineHelpText>
    <label>ACH Next Debit Date</label>
    <type>Date</type>
</CustomField>