force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Application_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Application_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Application Received Date.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>