force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Billing_Group__c.field-meta.xml
<CustomField>
    <fullName>loan__Billing_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Group</label>
    <referenceTo>clcommon__Billing_Group__c</referenceTo>
    <relationshipLabel>CL Contracts</relationshipLabel>
    <relationshipName>CL_Contracts_del</relationshipName>
    <type>Lookup</type>
</CustomField>