force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Capitalization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>loan__Capitalization_Frequency__c</fullName>
    <description>This decides the frequency at which capitalization will be done</description>
    <inlineHelpText>This decides the Capitalization Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
    <label>Compounding Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Single-Payment</fullName>
            </value>
            <value>
                <fullName>Billing Frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>