force-app/main/default/objects/loan__Loan_Account__c/fields/loan__CLTV__c.field-meta.xml
<CustomField>
    <fullName>loan__CLTV__c</fullName>
    <description>This field depicts Cumulative Loan to Value Ratio</description>
    <inlineHelpText>This field depicts Combined Loan to Value Ratio</inlineHelpText>
    <label>Combined Loan to Value Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>