force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Consolidate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>loan__Consolidate_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Consolidate Invoice</label>
    <type>Checkbox</type>
</CustomField>