force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Contractual_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Contractual_Interest_Rate__c</fullName>
    <inlineHelpText>Contractual Interest Rate on the contract.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>