force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Delinquency_Aging_Interval__c.field-meta.xml
<CustomField>
    <fullName>loan__Delinquency_Aging_Interval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Delinquency Interval that decide the aging of the loan</description>
    <inlineHelpText>Lookup to Delinquency Interval that decide the aging of the loan</inlineHelpText>
    <label>Delinquency Aging Interval</label>
    <referenceTo>loan__Delinquency_Interval__c</referenceTo>
    <relationshipLabel>CL Contracts</relationshipLabel>
    <relationshipName>CL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>