force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Delinquency_Basis__c.field-meta.xml
<CustomField>
    <fullName>loan__Delinquency_Basis__c</fullName>
    <description>This field will represent the delinquency method, whether the delinquency needs to be derived from bills or schedules.</description>
    <inlineHelpText>This field will represent the delinquency method, whether the delinquency needs to be derived from bills or schedules.</inlineHelpText>
    <label>Delinquency Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bills</fullName>
            </value>
            <value>
                <fullName>Balances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>