force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Draw_Period_Interest_Calculation__c.field-meta.xml
<CustomField>
    <fullName>loan__Draw_Period_Interest_Calculation__c</fullName>
    <label>Draw Period Interest Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Draw_Billing_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Simple Interest</fullName>
                <default>true</default>
                <label>Simple Interest</label>
            </value>
            <value>
                <fullName>Compounding Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>