force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Due_Day__c.field-meta.xml
<CustomField>
    <fullName>loan__Due_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due Day for the loan account.</description>
    <inlineHelpText>The day on which the loan payment is due.</inlineHelpText>
    <label>Current Due Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>