force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Flexible_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Flexible_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked then the loan account can have the interest rate schedules.</description>
    <inlineHelpText>If this is checked then the loan account can have the interest rate schedules.</inlineHelpText>
    <label>Flexible Rate</label>
    <type>Checkbox</type>
</CustomField>