force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Frequency_of_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
    <inlineHelpText>This decides the Payment Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Single-Payment</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly-PD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>