force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Funding_Stop_Basis__c.field-meta.xml
<CustomField>
    <fullName>loan__Funding_Stop_Basis__c</fullName>
    <inlineHelpText>If Funding Stop Basis is set to &apos;Draw Period End&apos; then no further funding is allowed after Draw Period End Date</inlineHelpText>
    <label>Funding Stop Basis</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Funding_in_Tranches__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Draw Period End</fullName>
            </value>
            <value>
                <fullName>Suspended Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>