force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Collected_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Collected_In_Advance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the total additional interest collected in advance from funding.</description>
    <inlineHelpText>This is the total additional interest collected in advance from funding.</inlineHelpText>
    <label>Interest Collected In Advance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>